--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -1,36 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 2 — Promise Generator</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Snackbar</title>
   </head>
   <body>
-    <h1>Promise Generator</h1>
-    <form id="promise-form">
+    <form class="form">
       <label>
         Delay (ms):
-        <input type="number" name="delay" required min="0" />
+        <input type="number" name="delay" required />
       </label>
-      <fieldset>
-        <legend>State</legend>
-        <label>
-          <input type="radio" name="state" value="fulfilled" checked />
-          Fulfilled
-        </label>
-        <label>
-          <input type="radio" name="state" value="rejected" />
-          Rejected
-        </label>
-      </fieldset>
-      <button type="submit">Create Promise</button>
+      <label>
+        <input type="radio" name="state" value="fulfilled" checked />
+        Fulfilled
+      </label>
+      <label>
+        <input type="radio" name="state" value="rejected" />
+        Rejected
+      </label>
+      <button type="submit">Show notification</button>
     </form>
 
     <script type="module" src="./js/2-snackbar.js"></script>
