--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 2 — Advanced JavaScript</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css"
-    />
-    <link rel="stylesheet" href="./styles.css" />
+    <title>Homework 2</title>
   </head>
   <body>
     <h1>Homework 2 — Advanced JavaScript</h1>
     <ul>
-      <li><a href="./1-timer.html">Task 1 — Countdown Timer</a></li>
-      <li><a href="./2-snackbar.html">Task 2 — Promise Generator</a></li>
+      <li><a href="./1-timer.html">Task 1 — Timer</a></li>
+      <li><a href="./2-snackbar.html">Task 2 — Snackbar</a></li>
     </ul>
   </body>
 </html>
